--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
   "dependencies": {
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "chokidar": "^3.0.0",
-    "redux": "^4.0.4",
-    "react-redux": "6.0.1",
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.4",
     "shelljs": "^0.8.3",
     "webpack-inject-plugin": "^1.5.0",
     "ws": "^7.0.0"
