created working signup endpoint with component, added store

--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "cookie-parser": "^1.4.4",
     "express": "^4.16.4",
     "mongodb": "^3.3.4",
+    "multer": "^1.4.2",
     "react-redux": "^6.0.1",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
     "shelljs": "^0.8.3",
     "webpack-inject-plugin": "^1.5.0",
