--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.16.4",
     "mongodb": "^3.3.4",
     "multer": "^1.4.2",
+    "react-datepicker": "^2.10.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
