--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/plugin-proposal-class-properties": "^7.3.4",
     "chokidar": "^3.0.0",
     "cookie-parser": "^1.4.4",
+    "dateformat": "^3.0.3",
     "express": "^4.16.4",
     "mongodb": "^3.3.4",
     "multer": "^1.4.2",
