--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
     "express": "^4.16.4",
     "mongodb": "^3.3.4",
     "multer": "^1.4.2",
+    "normalize.css": "^8.0.1",
     "react-datepicker": "^2.10.1",
     "react-redux": "^6.0.1",
     "react-router-dom": "^5.1.2",
+    "react-select": "^3.0.8",
     "redux": "^4.0.4",
     "shelljs": "^0.8.3",
     "webpack-inject-plugin": "^1.5.0",
